Fix for checkbox labels overflowing their container

--- a/prime-angular-frontend/src/scss/material/_material-fixes.scss
+++ b/prime-angular-frontend/src/scss/material/_material-fixes.scss
@@ -9,6 +9,16 @@
 }
 
 //
+// Forms
+//
+
+.mat-checkbox-layout {
+  // Force checkbox labels to line wrap if required
+  // instead of overflowing their container
+  white-space: normal !important;
+}
+
+//
 // Sidenav
 //
 
